fix(ui): Define title color styling, adjust vertical spacing and enable button wrapping on mobile

--- a/editor-components/call_to_action/call_to_action15/call_to_action15.module.scss
+++ b/editor-components/call_to_action/call_to_action15/call_to_action15.module.scss
@@ -22,12 +22,6 @@
             .title{
                 text-align: center;
                 width: 100%;
-                .title-primary{
-                    color: var( --composer-primary-color);
-                }
-                .title-highlight{
-                    color: var(--composer-font-color-primary);
-                }
             }
             .description{
                 text-align: center;
